# backend/internal/app/api/order/order.go
@@ -8,6 +8,8 @@ import (
 type Service interface {
 	CreateOrder(ctx context.Context, customerId int, comment string) (*model.Order, error)
 	GetOrdersByCustomerId(ctx context.Context, customerId int) ([]*model.Order, error)
+	GetOrdersByAlias(ctx context.Context, alias string) ([]*model.Order, error)
+	GetWebsiteByAdminId(ctx context.Context, adminId int) (*model.Website, error)
 }
 
 type Order struct {
